--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "graphql": "^16.6.0",
-    "nexus": "^1.3.0"
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.11.2",
+    "morgan": "^1.10.0",
+    "nexus": "^1.3.0",
+    "ws": "^8.12.0"
   }
 }
