--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependenpmncies": {
+  "devDependencies": {
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
@@ -24,6 +24,10 @@
     "graphql-ws": "^5.11.2",
     "morgan": "^1.10.0",
     "nexus": "^1.3.0",
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0",
     "ws": "^8.12.0"
   }
 }
