--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "nodemon src/index.ts --transpile-only --ignore dist"
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
