--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.20",
+    "prisma": "^4.10.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@apollo/server": "^4.3.0",
+    "@prisma/client": "^4.10.0",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "graphql": "^16.6.0",
