--- a/package.json
+++ b/package.json
@@ -4,16 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "test":"jest",
+    "jest":{
+      "preset": "ts-jest",
+      "globals": {
+        "ts-jest": {
+          "diagnostics": { "warnOnly": true }
+        }
+      },
+      "testEnvironment": "node"
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "get-port": "^6.1.2",
+    "graphql-request": "^5.1.0",
+    "jest": "^29.4.2",
     "nodemon": "^2.0.20",
     "prisma": "^4.10.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   },
   "dependencies": {
